# libcint

./: .gitignore  .travis.yml  CMakeLists.txt  conda_build_config.yaml
.easybuild/: libcint-3.0.19-intel2019b.eb
.github/workflows/: build-and-test.yml  build.yml  cd-conda.yml  ci-cd-conda.yml  ci-conda.yml  conda.yml
cmake/: FindMKL.cmake  cint-config.cmake.in
conda/: build.sh  conda_build_config.yaml  meta.yaml
include/: CMakeLists.txt
src/: CMakeLists.txt
src/autocode/: CMakeLists.txt
testsuite/: test_3c2e.py  test_cint.py  test_int1e.py  test_int2e_f12_etc.py  test_int3c1e.py  test_int3c2e.py
